resolved some spacing issues

--- a/style.css
+++ b/style.css
@@ -524,7 +524,7 @@ nav .fa {
     padding-top: 20px;
   }
   .right-side img {
-    width: 70%;
+    width: 60%;
   }
 }
 @media screen and (max-width: 780px) {
